--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
 @use 'hero';
+@use 'components/infosbar';
+@use 'components/buttons';
 
 *{
     margin: 0;
@@ -6,6 +8,14 @@
     box-sizing: border-box;
     font-family: Roboto, sans-serif;
     color: #FFF;
+
+    ul{
+        list-style: none;
+    }
+
+    a{
+        text-decoration: none;
+    }
 }
 
 .container{
